force-app/main/default/objects/Date_Drop__c/Date_Drop__c.object-meta.xml
<CustomObject>
    <label>Date Drop</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Date Drop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Date Drops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>