force-app/main/default/objects/Date_Drop__c/fields/Date_Finish__c.field-meta.xml
<CustomField>
    <fullName>Date_Finish__c</fullName>
    <label>Date Finish</label>
    <type>Date</type>
</CustomField>