force-app/main/default/objects/Date_Drop__c/fields/Value_Drop__c.field-meta.xml
<CustomField>
    <fullName>Value_Drop__c</fullName>
    <label>Value Drop</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>